<resources>
    <string name="app_name">众指网</string>
    <string name="title_main">众指网</string>
    <string name="title_home">首页</string>
    <string name="title_product">产品</string>
    <string name="title_asset">资产</string>
    <string name="title_me">我的</string>
    <string name="app_exit">再按一次退出众指网</string>

    <!--主页资源 Start-->
    <string name="home_point_store">积分商城</string>
    <string name="home_coupon">优惠券</string>
    <string name="home_invite_friends">邀请好友</string>
    <string name="home_check_in">用户签到</string>
    <string name="home_invite_reward">邀请有奖</string>
    <string name="check_in_get_discount">每日签到得优惠，</string>
    <string name="go_get_it">去签到</string>
    <string name="new_discount">新手专享</string>
    <string name="expected_annualize">预期年化</string>
    <string name="regular_20">定期20天</string>
    <string name="buy_immediately">立即购买</string>
    <string name="submit_order">提交订单</string>
    <string name="view_more">查看更多产品></string>
    <string name="new_guide">新手指南</string>
    <string name="about_ys">关于我们</string>
    <string name="activitis">活动</string>
    <string name="hot_products">热销产品</string>
    <string name="exchange_records">兑换记录</string>
    <string name="points">积分:</string>
    <string name="i_can_exchange">我可以兑换</string>
    <string name="get_points">获取积分</string>
    <string name="total_points">总积分</string>
    <string name="my_points">我的积分</string>
    <string name="product_introduction">商品简介</string>
    <string name="instructions">使用方法</string>
    <string name="exchange_immediately">立即兑换</string>
    <string name="unused">未使用</string>
    <string name="used">已使用</string>
    <string name="expired">已过期</string>
    <string name="reward_method">奖励方法：每1名好友注册送XX</string>
    <string name="reward_method_1">方式一：分享邀请链接</string>
    <string name="reward_method_2">方式二：让好友扫描下方的二维码</string>
    <string name="moments">朋友圈</string>
    <string name="wechat">微信好友</string>
    <string name="qqzone">QQ空间</string>
    <string name="qq_friends">QQ好友</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="ys_short_product">乙晟短期产品</string>
    <string name="expected_earnings">预期年化收益</string>
    <string name="discount">优惠</string>
    <string name="cut_when_reach">满减券</string>
    <string name="cut_immediately">直减券</string>
    <string name="add_earning_coupon">加息券</string>
    <string name="invist_date">投资期限</string>
    <string name="interst_date">起息日期</string>
    <string name="buy_amount">起购金额</string>
    <string name="purchase_amount">购买金额:</string>
    <string name="yuan">元</string>
    <string name="purchase_amount_hinit">100元起购</string>
    <string name="end_date">到期日期</string>
    <string name="asset_safety">资产安全</string>
    <string name="product_detail">产品详情</string>
    <string name="disclaimer">平台免责声明</string>
    <string name="supported_banks">支持银行及限额</string>
    <string name="product_total">产品总额</string>
    <string name="expected_annualization">预期年化</string>
    <string name="deadline">期限</string>
    <string name="intrest_day">起息日</string>
    <string name="end_day">到期日</string>
    <string name="buy_limit">起购金额</string>
    <string name="fees">手续费</string>
    <string name="income_tax">个人所得税</string>
    <string name="redemption">赎回</string>
    <string name="confirm_order">确认订单</string>
    <string name="add_management">地址管理</string>
    <string name="pls_login">您还未登录，请先登录!</string>
    <string name="modify_success">修改成功</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_failed">提交失败</string>
    <string name="exchange_succefull">兑换成功</string>
    <string name="exchange_failed">兑换失败</string>
    <string name="edit_add">编辑地址</string>
    <string name="add_address">新增收货地址</string>
    <string name="receiver">收货人：</string>
    <string name="phone_num">手机号码：</string>
    <string name="receiver_add">所在地址：</string>
    <string name="add_detail">详细地址：</string>
    <string name="receiver_not_null">收货人不能为空</string>
    <string name="num_not_null">手机号不能为空</string>
    <string name="add_not_null">详细地址不能为空</string>
    <string name="set_as_default">设为默认地址</string>
    <string name="save">保存</string>
    <string name="reset">重置</string>
    <string name="delete">删除</string>
    <string name="pls_add_address">请添加收货地址</string>
    <string name="add_address_remarks">注：该商品支持全国(除港澳台地区外)配送</string>
    <string name="add_new_address">添加新地址</string>
    <string name="select_province">省/市</string>
    <string name="select_city">市</string>
    <string name="select_district">区</string>
    <string name="add_address_success">添加地址成功</string>
    <string name="delete_address_success">删除地址成功</string>
    <string name="delete_address_failed">删除地址失败</string>
    <string name="set_default_success">设置默认地址成功</string>
    <string name="set_default_failed">设置默认地址失败</string>
    <string name="pls_select_add">请选择所在地址</string>
    <string name="input_purchase_amount">填写购买金额</string>
    <string name="next">下一步</string>
    <string name="pls_input_amount">请输入金额</string>
    <string name="amount_more_than_100">金额不能小于100元</string>
    <string name="pay_amount">待支付金额</string>
    <string name="zc_balance">众财余额</string>
    <string name="useable_coupon">可用优惠券</string>
    <string name="have_useable_coupon">有可用优惠券</string>
    <string name="bank_pay">银行卡支付</string>
    <string name="pay">支付</string>
    <string name="confirm">确定</string>
    <!--主页资源 End-->

    <!--产品资源 Start-->
    <!--产品资源 End-->

    <!--资产资源 Start-->
    <string name="total_asset">总资产（元）</string>
    <string name="transaction_record">交易记录</string>
    <string name="earning_record">收益记录</string>
    <string name="total_income">累计收益（元）</string>
    <string name="withdraw_amount">可提现金额（元）</string>
    <string name="on_way_amount">在途金额（元）</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="goto_manage">去理财</string>

    <string name="i_want_recharge">我要充值</string>
    <string name="account_balance">账户余额：</string>
    <string name="recharge_bank_card">充值银行卡：</string>
    <string name="recharge_amount">充值金额：</string>
    <string name="input_amount">请输入充值金额</string>
    <string name="recharge_immediately">立即充值</string>

    <string name="i_want_withdraw">我要提现</string>
    <string name="can_withdraw_amount">可提现金额：</string>
    <string name="with_bank_card">提现至：</string>
    <string name="withdraw_money">提现金额：</string>
    <string name="input_withdraw_amount">请输入提现金额</string>
    <string name="withdraw_immediately">立即提现</string>
    <string name="please_input">请输入提现金额</string>
    <string name="recharge_not_null">充值金额不能为空</string>
    <string name="withdraw_not_null">提现金额不能为空</string>
    <string name="recharge_succee">充值成功</string>
    <string name="withdraw_succee">提现成功</string>
    <string name="pay_succee">支付成功</string>
    <!--资产资源 End-->

    <!--我的资源 Start-->
    <string name="my_account">我的账户</string>
    <string name="bank_card">银行卡</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="notification">提醒通知</string>
    <string name="about_yisheng">关于我们</string>
    <string name="feed_back">吐个槽</string>
    <string name="client_phone">客服电话：</string>
    <string name="version">版本号：</string>
    <string name="my_code">我的邀请码：</string>
    <string name="tell_code_to_others">邀请码告诉给注册者，方便给别人，积分给自己</string>
    <string name="coupon_notify">优惠券通知</string>
    <string name="coupon">优惠券</string>
    <string name="points_notify">积分通知</string>
    <string name="others_notify">其他通知</string>
    <string name="notification_center">消息中心</string>
    <string name="feedback_to_improve">用着不过瘾？您来吐槽，我来改进</string>
    <string name="contact_info">手机号/邮箱地址（选填）</string>
    <string name="submit">提交</string>
    <string name="please_input_content">请输入吐槽内容</string>

    <string name="account">账户</string>
    <string name="registration_success">注册成功</string>
    <string name="verify_code_sent_success">验证码发送成功</string>
    <string name="modify_psw">修改密码</string>
    <string name="forget_psw">忘记密码</string>
    <string name="current_psw">当前密码：</string>
    <string name="new_psw">新密码：</string>
    <string name="confirm_psw">确认密码：</string>
    <string name="input_current_psw">请输入当前密码</string>
    <string name="input_new_psw">请输入新密码</string>
    <string name="reinput_new_psw">再次输入新密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="verify_code">验证码：</string>
    <string name="input_code">填写验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="save_psw">保存密码</string>
    <string name="psw_not_null">密码不能为空</string>
    <string name="code_not_null">验证码不能为空</string>
    <string name="two_different">两次输入密码不同</string>
    <string name="phone_number">手机号：</string>
    <string name="input_phone_num">填写手机号</string>
    <string name="phone_num_not_null">手机号不能为空</string>
    <string name="phone_num_should_correct">请输入正确的手机号</string>
    <string name="set_psw">设置密码：</string>
    <string name="pls_input_your_psw">请输入您的密码</string>
    <string name="input_invite_code">填写您的邀请人邀请码</string>
    <string name="invited_code">邀请码：</string>
    <string name="login">用户登录</string>
    <string name="login_btn">登录</string>
    <string name="login_success">登录成功</string>
    <string name="register">用户注册</string>
    <string name="register_quickly">快速注册</string>
    <string name="register_txt">注册</string>
    <string name="psw_login">密码登录</string>
    <string name="user_agreement">《平台注册协议》</string>
    <string name="forget_psw_mark">忘记密码?</string>
    <string name="phone_quickly_login">手机号快捷登录</string>
    <string name="password">密码：</string>
    <string name="logout">退出</string>
    <string name="add_card">+ 添加卡片</string>
    <string name="add_card_title">添加银行卡</string>
    <string name="add_card_name">姓名：</string>
    <string name="add_card_bank_card">银行卡：</string>
    <string name="add_card_id">身份证：</string>
    <string name="add_card_phone">手机号：</string>
    <string name="add_card_bank">银行：</string>
    <string name="add_card_province">省市：</string>
    <string name="add_card_website">网点：</string>
    <string name="add_card_amount">支付金额：</string>
    <string name="add_card_hint_name">填写姓名</string>
    <string name="add_card_hint_bank_card">填写银行卡号</string>
    <string name="add_card_hint_id">填写身份证号</string>
    <string name="add_card_hint_phone">银行预留的手机号</string>
    <string name="add_card_hint_bank">点击这里选择银行</string>
    <string name="add_card_choose">请选择</string>
    <string name="add_card_hint_website">银行网点</string>
    <string name="add_card_hint_amount">请输入支付金额</string>
    <string name="cancel">取消</string>
    <string name="bank_card_select">银行卡选择</string>
    <string name="pls_input_code">请输入手机验证码</string>
    <string name="verify_code_hint">您的手机将收到国付宝发送的短信验证码，请输入验证码完成绑定</string>
    <string name="binging">绑定中</string>
    <!--我的资源 End-->
</resources>
