<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/pls_input_code"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_middle"/>

    <TextView
        android:id="@+id/add_bankcard_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center|left"
        android:text="@string/verify_code_hint"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_middle"/>

    <EditText
        android:id="@+id/add_bankcard_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:hint="@string/input_code"
        android:imeActionLabel="@string/code_not_null"
        android:inputType="phone"
        android:maxLines="1"
        android:textColor="@color/text_dark"
        android:textSize="@dimen/text_middle"/>
</LinearLayout>