<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical">

    <com.chinayszc.mobile.widget.CommonTitleView
        android:id="@+id/purchase_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/purchase_name"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/app_margin_left"
            android:gravity="center_vertical"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_middle"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/app_margin_left"
                android:gravity="center_vertical"
                android:text="@string/purchase_amount"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_middle" />

            <EditText
                android:id="@+id/purchase_amount"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/purchase_amount_hinit"
                android:imeActionLabel="@string/pls_input_amount"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLines="1"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_middle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:text="@string/yuan"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_middle" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/purchase_btn"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="@dimen/app_margin_left"
            android:background="@drawable/common_btn_bg"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/text_middle" />

    </FrameLayout>

</LinearLayout>